fix(styles): header font size, graph position
Header font size is too big for mobile.

--- a/components/weather-graph/weather-graph.module.scss
+++ b/components/weather-graph/weather-graph.module.scss
@@ -9,6 +9,10 @@
   border-radius: $border-radius;
   background-color: $color-white-transparent;
 
+  canvas {
+    margin-bottom: -1em;
+  }
+
   @include breakpoint('medium') {
     width: 50%;
   }
@@ -18,11 +22,16 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 1em;
 
   .header-title {
-    font-size: 1.5em;
+    font-size: 1.25em;
     font-weight: bold;
     color: $color-black;
+
+    @include breakpoint('small') {
+      font-size: 1.125em;
+    }
   }
 
   .header-button {
